--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         { label: "👂 聽力加強", content: "彈奏時多聽自己的聲音，注意強弱對比與樂句的流暢度。" },
         { label: "⏱️ 慢速練習", content: "新曲子請務必先慢速練習，待指法熟練後再逐步加快速度。" },
         { label: "✅ 完成目標", content: "恭喜完成本週目標！下週我們將挑戰新的進度。" }
+        { label: “提醒繳費", content: "下週為第一堂課，請抽空繳費" }
     ];
 
     let currentSaveName = localStorage.getItem('v_save_v2026') || '預設存檔';
