--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     let timerInterval = null, timeLeft = 1200, totalTimeSet = 1200, isTimerRunning = false, isStarLocked = true, isTaskLocked = true;
     let count = 5;
     const MASTER_PWD = "888";
-    const DEFAULT_BOOKS = ["哈農", "芬貝爾", "彈唱曲集", "佈爾格彌勒", "視奏"];
+    const DEFAULT_BOOKS = ["哈農", "芬貝爾", "彈唱曲集", "佈爾格彌勒", "視奏", "和絃", "小奏鳴曲"];
     const DEFAULT_NOTES = [
         { label: "✨ 表現優異", content: "本週表現非常不錯，節奏和流暢度都有進步，請繼續保持！" },
         { label: "🎹 注意手型", content: "練習時請注意手型，支撐好掌關節，避免手指塌陷。" },
